# ReZygisk

./: Makefile  common.mk
.github/workflows/: build-nuke-lkm.yml  ci.yml  trusted_ci.yml
loader/: Makefile
loader/src/common/: daemon.c  socket_utils.c
loader/src/include/: logging.h  socket_utils.h
loader/src/injector/: entry.c  hook.c
loader/src/ptracer/: monitor.c  ptracer.c
loader/src/treat_wheel/: elf_util.c  elf_util.h  hiding.c  hiding.h  rz_daemon.c  rz_daemon.h  treat_wheel_adapter.c  treat_wheel_adapter.h  utils.c  utils.h  zygisk.h
module/src/: config.sh  customize.sh  metainstall.sh  metamount.sh  metauninstall.sh  module.prop  modules.txt  post-fs-data.sh  sepolicy.rule  uninstall.sh
nuke_ext4_lkm/: BUILD.bazel  nuke.c
scripts/: sign.py
webroot/: index.css  index.html
webroot/css/: icons.css  index.css
webroot/fonts/: header.css
webroot/js/: preloader.js
webroot/js/pages/: pageLoader.js
webroot/js/pages/actions/: index.css  index.html  index.js
webroot/js/pages/home/: index.css  index.html  index.js
webroot/js/pages/metamount/: index.css  index.html  index.js  pageScripts
webroot/js/pages/modules/: index.html  index.js
webroot/js/pages/settings/: index.css  index.html  index.js
webroot/js/pages/treatwheel/: index.css  index.html  index.js  pageScripts
webroot/js/themes/: amoled.js  dark.js  light.js  main.js
webroot/lang/: en_US.json  zh_CN.json
zygiskd/src/: companion.c  utils.c  zygiskd.c
zygiskd/src/root_impl/: apatch.c  kernelsu.c  magisk.c
